// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ui Components Button component should match snapshot 1`] = `
.c0 {
  width: 200px;
  height: 45px;
  border-radius: 5px;
  background-color: #2d3436;
  color: #fff;
  opacity: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row no-wrap;
  -ms-flex-flow: row no-wrap;
  flex-flow: row no-wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 2px solid #2d3436;
  margin: 0 15px;
  font-family: -apple-system,BlinkMacSystemFont,sans-serif;
  font-weight: bold;
  cursor: pointer;
}

<div
  className="c0"
  onClick={[Function]}
>
  <span>
    test
  </span>
</div>
`;

exports[`Ui Components Button component should match snapshot 2`] = `
.c0 {
  width: 200px;
  height: 45px;
  border-radius: 5px;
  background-color: #2d3436;
  color: #fff;
  opacity: 0.5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row no-wrap;
  -ms-flex-flow: row no-wrap;
  flex-flow: row no-wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 2px solid #2d3436;
  margin: 0 15px;
  font-family: -apple-system,BlinkMacSystemFont,sans-serif;
  font-weight: bold;
  cursor: pointer;
}

<div
  className="c0"
  onClick={[Function]}
>
  <span>
    test
  </span>
</div>
`;

exports[`Ui Components Button component should match snapshot 3`] = `
.c0 {
  width: 200px;
  height: 45px;
  border-radius: 5px;
  background-color: #fff;
  color: #2d3436;
  opacity: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row no-wrap;
  -ms-flex-flow: row no-wrap;
  flex-flow: row no-wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 2px solid #2d3436;
  margin: 0 15px;
  font-family: -apple-system,BlinkMacSystemFont,sans-serif;
  font-weight: bold;
  cursor: pointer;
}

<div
  className="c0"
  onClick={[Function]}
>
  <span>
    test
  </span>
</div>
`;

exports[`Ui Components Label component should match snapshot 1`] = `
.c0 {
  width: 500px;
  height: 30px;
  border-radius: 5px;
  background-color: #27ae60;
  color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row no-wrap;
  -ms-flex-flow: row no-wrap;
  flex-flow: row no-wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0 15px;
  font-family: -apple-system,BlinkMacSystemFont,sans-serif;
  font-weight: bold;
}

<div
  className="c0"
>
  <span>
    test
  </span>
</div>
`;

exports[`Ui Components Row component should match snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row no-wrap;
  -ms-flex-flow: row no-wrap;
  flex-flow: row no-wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 20px 0;
}

<div
  className="c0"
>
  <div />
  <div />
  <div />
</div>
`;
